2004-02-19 (Evan)
	* Install manpage on "make install", etc.

2003-12-30 (Brad)
	* remove static build stuff.  interferes with PAM setuid stuff
	  and was only included as a possible fix with the old memory
	  allocator.  really shouldn't make a difference.
	* add Jay Bonci's Debian scripts and manpage
	* release version 1.1.10

2003-12-01 (Avva)
	* New command: flush_all, causes all existing items to
	  be invalidated immediately (without deleting them from
	  memory, merely causing memcached to no longer return them).
2003-10-23
	* Shift init code around to fix daemon mode on FreeBSD,
	* and drop root only after creating the server socket (to
	* allow the use of privileged ports)
	* version 1.1.10pre

2003-10-09
	* BSD compile fixes from Ryan T. Dean
	* version 1.1.9
	
2003-09-29
	* ignore SIGPIPE at start instead of crashing in rare cases it
	  comes up.  no other code had to be modified, since everything
	  else is already dead-connection-aware.  (avva)
	
2003-09-09 (Avva, Lisa Marie Seelye <lisa@gentoo.org>)
	* setuid support
	
2003-09-05 (Avva)
	* accept all new connections in the same event (so we work with ET epoll)
	* mark all items as clsid=0 after slab page reassignment to please future
	  asserts (on the road to making slab page reassignment work fully)

2003-08-12 (Brad Fitzpatrick)
	* use TCP_CORK on Linux or TCP_PUSH on BSD
	* only use TCP_NODELAY when we don't have alternatives
	
2003-08-10
	* disable Nagel's Algorithm (TCP_NODELAY) for better performance (avva)

2003-08-10
	* support multiple levels of verbosity (-vv)

2003-08-10  (Evan Martin)
	* Makefile.am: debug, optimization, and static flags are controlled
	  by the configure script.
	* configure.ac:
	  - allow specifying libevent directory with --with-libevent=DIR
	  - check for malloc.h (unavailable on BSDs)
	  - check for socklen_t (unavailable on OSX)
	* assoc.c, items.c, slabs.c:  Remove some unused headers.
	* memcached.c:  allow for nonexistence of malloc.h; #define a POSIX